최초 프로젝트 생성 및 커밋

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,78 @@
+# C++ 관련 빌드 파일들
+# Windows
+*.exe
+*.out
+*.app
+*.dll
+*.obj
+*.o
+*.lo
+*.la
+*.a
+*.lib
+*.so
+*.dylib
+*.pch
+*.pdb
+*.idb
+*.ilk
+*.exp
+
+# CMake, Makefile 등 빌드 시스템에서 생성되는 파일들
+CMakeCache.txt
+CMakeFiles/
+Makefile
+Makefile.in
+Makefile.am
+build/
+Debug/
+Release/
+*.log
+
+# Visual Studio 관련 파일들
+.vs/
+.vscode/
+.vscode/settings.json
+.vscode/tasks.json
+.vscode/launch.json
+.vscode/c_cpp_properties.json
+*.vcxproj
+*.vcxproj.user
+*.suo
+*.user
+*.userosscache
+*.sln
+*.sdf
+*.dbmdl
+*.opendb
+
+# Qt Creator 관련 파일들
+*.pro.user
+*.qmake.stash
+*.qmake.cache
+*.pro.user.*
+
+# Xcode 관련 파일들
+*.xcuserdata/
+*.xcodeproj/*
+*.xcworkspace/
+
+# 기타 편집기 설정 파일들
+*.swp
+*.swo
+*~
+.idea/
+
+# 종속성 관리 파일들
+*.cmake
+
+# 임시 파일들
+Thumbs.db
+.DS_Store
+
+# Git LFS
+*.tif
+
 # Prerequisites
 *.d
 
